Persistence queue done.